# apflix

./: APFlix.py  Dockerfile  README.md  main.py  pyproject.toml
.aws/: task-definition.json
.github/workflows/: aws.yml
apflix/: app.py  helper.py
assets/: 120.json  13.json  27205.json  274.json  278.json  329.json  346698.json  365620.json  447277.json  520758.json  550.json  572802.json  597.json  603.json  680.json  693134.json  726209.json  862968.json  872585.json  884605.json
