[tool.poetry]
name = "apflix"
version = "0.1.0"
description = ""
authors = ["Irad Aharoni <irad.aharoni@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
openai = "^1.25.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
